# learning-cmake

./: LICENSE  README.md
chp1/: CMakeLists.txt
chp1/chp1-1/: CMakeLists.txt  main.cpp
chp1/chp1-2/: CMakeLists.txt  main.cpp
chp2/chp2_1/: CMakeLists.txt
chp2/chp2_1/src/: CMakeLists.txt
chp2/chp2_1/src/add/: CMakeLists.txt  iadd.cpp
chp2/chp2_1/src/mul/: CMakeLists.txt
chp2/chp2_2/src/: CMakeLists.txt
chp2/chp2_2/src/add/: CMakeLists.txt
chp2/chp2_2/src/mul/: CMakeLists.txt
chp2/chp2_3/src/: CMakeLists.txt
chp2/chp2_3/src/add/: CMakeLists.txt
chp2/chp2_3/src/mul/: CMakeLists.txt
chp2/chp2_4/: CMakeLists.txt
chp2/chp2_4/src/: CMakeLists.txt
chp2/chp2_4/src/add/: CMakeLists.txt
chp2/chp2_4/src/include/: fma.h
chp2/chp2_4/src/mul/: CMakeLists.txt  fmul.cpp
chp3/chp3_1/src/: CMakeLists.txt
chp3/chp3_1/src/mul/: imul.cpp
chp3/chp3_2/: CMakeLists.txt
chp3/chp3_2/src/: CMakeLists.txt
chp3/chp3_3/: CMakeLists.txt
chp3/chp3_3/cmake/: mathConfig.cmake.in
chp3/chp3_3/src/: CMakeLists.txt
chp3/chp3_3/src/add/: CMakeLists.txt
chp3/chp3_main/: CMakeLists.txt
chp3/chp3_main2/: CMakeLists.txt
chp4/chp4_1/src/: CMakeLists.txt
chp4/chp4_1/src/mul/: CMakeLists.txt
chp4/chp4_1/src/mul/include/: mul.h
chp4/chp4_2/: CMakeLists.txt
chp4/chp4_2/src/: CMakeLists.txt
chp4/chp4_2/src/add/: CMakeLists.txt
chp4/chp4_3/src/: CMakeLists.txt
chp4/chp4_3/src/add/: CMakeLists.txt
chp4/chp4_3/src/add/include/: add.h
chp4/chp4_3/src/mul/: CMakeLists.txt  imul.cpp
chp4/chp4_4/: CMakeLists.txt
chp4/chp4_4/src/: CMakeLists.txt
chp4/chp4_4/src/add/: CMakeLists.txt
chp4/chp4_4/src/mul/include/: mul.h
chp4/chp4_5/src/: ifma.cpp
chp4/chp4_5/src/add/: CMakeLists.txt  fadd.cpp  iadd.cpp
chp4/chp4_5/src/mul/: CMakeLists.txt  imul.cpp
chp4/chp4_6/: CMakeLists.txt
chp4/chp4_6/src/: CMakeLists.txt
chp4/chp4_main/: CMakeLists.txt  main.cpp
chp4/chp4_main2/: main.cpp
chp4/chp4_main3/: main.cpp
